- fix deprecation warnings